--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/jquery.easing.js"></script>
   <script type="text/javascript" src="js/jquery.validate.min.js"></script>
-  <script type="text/javascript" src="js/jquery.localscroll.js"></script>
+  <script type="text/javascript" src="js/jquery.localScroll.js"></script>
   <script type="text/javascript" src="js/jquery.scrollTo.js"></script>
   <script type="text/javascript" src="js/jquery.fitvids.js"></script>
   <script type="text/javascript" src="js/jquery.appear.js"></script>
