comment out google dark js

--- a/index.html
+++ b/index.html
@@ -734,11 +734,11 @@
   <script type="text/javascript" src="js/jquery.appear.js"></script>
   <script type="text/javascript" src="js/waypoints.min.js"></script>
   <script type="text/javascript" src="js/owl.carousel.min.js"></script>
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+  <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script> -->
 
   <!-- Custom Script -->
   <script type="text/javascript" src="js/custom.js"></script>
-  <script type="text/javascript" src="js/GoogleMap-dark.js"></script>
+  <!-- <script type="text/javascript" src="js/GoogleMap-dark.js"></script> -->
   <script type="text/javascript" src="js/jquery.easing.js"></script>
   <!-- Google Analytics: Change UA-XXXXX-X to be your site's ID. Go to http://www.google.com/analytics/ for more information. -->
   <!--
