--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
               <div class="project-buttons">
                 <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-blue btn-sm">View it</a> -->
                 <a href="https://github.com/lbeagleeyes/WordGuess" target="_blank" class="btn btn-blue btn-sm">View code</a> 
-                <a href="https://lbeagleeyes.github.io/WordGuess/" target="_blank" class="btn btn-default btn-sm">Play
-                  Online</a></div>
+                <a href="https://lbeagleeyes.github.io/WordGuess/" target="_blank" class="btn btn-default btn-sm">Play Online</a>
+                </div>
             </div>
           </div>
         </div>
