--- a/index.html
+++ b/index.html
@@ -156,9 +156,7 @@
               <i class="title-icon text-blue flaticon-speech43"></i>
               <h3>Who am I?</h3>
               <p class="lead">Software Engineer with BS in Computer Science + 10 years of experience, currently
-                attending a Full Stack Web Development Bootcamp at the University of Washington, fully bilingual
-                English/Spanish, interested in complete software development life cycle, passionate about user-centered
-                design, with programming skills in C/C++, .Net, and SQL, using agile methodologies. Able to work as a
+                attending a Full Stack Web Development Bootcamp at the University of Washington, interested in complete software development life cycle, with programming skills in C/C++, .Net, and SQL, using agile methodologies. Able to work as a
                 liaison between technical and non-technical teams due to excellent communication skills, experience
                 gathering requirements and mockup design.</p>
               <a href="#portfolio" class="btn btn-black">See my portfolio</a> <a href="#contact"
