changed project image sizes

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in">
           <div class="project-image">
-            <img src="images/portfolio/project_01.jpg" alt=""  />
+            <img src="images/portfolio/project_01.jpg" alt="" width="1000px" height="900px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -346,7 +346,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-third">
           <div class="project-image">
-            <img src="images/portfolio/project_02.jpg" alt=""  />
+            <img src="images/portfolio/project_02.jpg" alt="" width="1000px" height="900px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -364,7 +364,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-second">
           <div class="project-image">
-            <img src="images/portfolio/project_03.jpg" alt="" />
+            <img src="images/portfolio/project_03.jpg" alt="" width="1000px" height="900px"/>
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -382,7 +382,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-fourth">
           <div class="project-image">
-            <img src="images/portfolio/project_04.jpg" alt="" />
+            <img src="images/portfolio/project_04.jpg" alt="" width="1000px" height="900px"/>
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -399,7 +399,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in ">
           <div class="project-image">
-            <img src="images/portfolio/project_09.jpg" alt=""  />
+            <img src="images/portfolio/project_09.jpg" alt="" width="1000px" height="900px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -415,7 +415,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-second">
           <div class="project-image">
-            <img src="images/portfolio/project_06.jpg" alt=""/>
+            <img src="images/portfolio/project_06.jpg" alt="" width="1000px" height="900px"/>
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -432,7 +432,7 @@
          <!-- Single Project -->
          <div class="single-project animated fade-in appear-fourth">
             <div class="project-image">
-              <img src="images/portfolio/project_07.jpg" alt=""  />
+              <img src="images/portfolio/project_07.jpg" alt="" width="1000px" height="900px" />
             </div>
             <div class="project-mask">
               <div class="project-info">
@@ -448,7 +448,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-fourth">
           <div class="project-image">
-            <img src="images/portfolio/project_05.jpg" alt=""  />
+            <img src="images/portfolio/project_05.jpg" alt="" width="1000px" height="900px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -462,9 +462,9 @@
           </div>
         </div>
         <!-- Single Project -->
-        <div class="single-project animated fade-in appear-third">
+        <div class="single-project animated fade-in">
             <div class="project-image">
-                <img src="images/portfolio/project_10.jpg" alt="" />
+                <img src="images/portfolio/project_10.jpg" alt="" width="1000px" height="900px"/>
             </div>
             <div class="project-mask">
               <div class="project-info">
