--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in">
           <div class="project-image">
-            <img src="images/portfolio/project_01.jpg" alt="" width="1000px" height="900px" />
+            <img src="images/portfolio/project_01.jpg" alt="" width="500px" height="450px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -346,7 +346,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-third">
           <div class="project-image">
-            <img src="images/portfolio/project_02.jpg" alt="" width="1000px" height="900px" />
+            <img src="images/portfolio/project_02.jpg" alt="" width="500px" height="450px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -364,7 +364,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-second">
           <div class="project-image">
-            <img src="images/portfolio/project_03.jpg" alt="" width="1000px" height="900px"/>
+            <img src="images/portfolio/project_03.jpg" alt="" width="500px" height="450px"/>
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -382,7 +382,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-fourth">
           <div class="project-image">
-            <img src="images/portfolio/project_04.jpg" alt="" width="1000px" height="900px"/>
+            <img src="images/portfolio/project_04.jpg" alt="" width="500px" height="450px"/>
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -396,26 +396,26 @@
             </div>
           </div>
         </div>
-        <!-- Single Project -->
-        <div class="single-project animated fade-in ">
-          <div class="project-image">
-            <img src="images/portfolio/project_09.jpg" alt="" width="1000px" height="900px" />
-          </div>
-          <div class="project-mask">
-            <div class="project-info">
-              <div class="project-title">Inventory CLI</div>
-              <div class="project-caption text-green">Node.js and MySql</div>
-              <div class="project-buttons">
-                <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-green btn-sm">View it</a>  -->
-                <a href="https://github.com/lbeagleeyes/damazon" target="_blank" class="btn btn-blue btn-sm">View code</a> 
-                <a href="https://lbeagleeyes.github.io/damazon/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
-            </div>
+                <!-- Single Project -->
+       <div class="single-project animated fade-in ">
+        <div class="project-image">
+          <img src="images/portfolio/project_11.jpg" alt="" width="500px" height="450px"/>
+        </div>
+        <div class="project-mask">
+          <div class="project-info">
+            <div class="project-title">Plateful - Recipe Ideas Search</div>
+            <div class="project-caption text-green">Node.js, Express and MySql</div>
+            <div class="project-buttons">
+              <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-green btn-sm">View it</a>  -->
+              <a href="https://github.com/lbeagleeyes/Project2" target="_blank" class="btn btn-blue btn-sm">View code</a> 
+              <a href="https://ancient-harbor-32208.herokuapp.com/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
           </div>
         </div>
+      </div>
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-second">
           <div class="project-image">
-            <img src="images/portfolio/project_06.jpg" alt="" width="1000px" height="900px"/>
+            <img src="images/portfolio/project_06.jpg" alt="" width="500px" height="450px"/>
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -429,42 +429,10 @@
             </div>
           </div>
         </div>
-         <!-- Single Project -->
-         <div class="single-project animated fade-in appear-fourth">
+          <!-- Single Project -->
+          <div class="single-project animated fade-in appear-second">
             <div class="project-image">
-              <img src="images/portfolio/project_07.jpg" alt="" width="1000px" height="900px" />
-            </div>
-            <div class="project-mask">
-              <div class="project-info">
-                <div class="project-title">Friend Finder</div>
-                <div class="project-caption text-blue">Express-Node application (hosted in Heroku)</div>
-                <div class="project-buttons">
-                  <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-blue btn-sm">View it</a> -->
-                  <a href="https://github.com/lbeagleeyes/friendFinder" target="_blank" class="btn btn-blue btn-sm">View code</a>
-                  <a href="https://secure-escarpment-67865.herokuapp.com/" target="_blank" class="btn btn-default btn-sm">View Online</a></div>
-              </div>
-            </div>
-          </div>
-        <!-- Single Project -->
-        <div class="single-project animated fade-in appear-fourth">
-          <div class="project-image">
-            <img src="images/portfolio/project_05.jpg" alt="" width="1000px" height="900px" />
-          </div>
-          <div class="project-mask">
-            <div class="project-info">
-              <div class="project-title">Train Table</div>
-              <div class="project-caption text-blue">Firebase usage</div>
-              <div class="project-buttons">
-                <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-blue btn-sm">View it</a> -->
-                <a href="https://github.com/lbeagleeyes/trainTable" target="_blank" class="btn btn-blue btn-sm">View code</a>
-                <a href="https://lbeagleeyes.github.io/trainTable/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
-            </div>
-          </div>
-        </div>
-        <!-- Single Project -->
-        <div class="single-project animated fade-in appear-second">
-            <div class="project-image">
-                <img src="images/portfolio/project_10.jpg" alt="" width="1000px" height="900px"/>
+                <img src="images/portfolio/project_10.jpg" alt="" width="500px" height="450px"/>
             </div>
             <div class="project-mask">
               <div class="project-info">
@@ -478,6 +446,73 @@
               </div>
             </div>
           </div> 
+         <!-- Single Project -->
+         <div class="single-project animated fade-in appear-fourth">
+            <div class="project-image">
+              <img src="images/portfolio/project_07.jpg" alt="" width="500px" height="450px" />
+            </div>
+            <div class="project-mask">
+              <div class="project-info">
+                <div class="project-title">Friend Finder</div>
+                <div class="project-caption text-blue">Express-Node application (hosted in Heroku)</div>
+                <div class="project-buttons">
+                  <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-blue btn-sm">View it</a> -->
+                  <a href="https://github.com/lbeagleeyes/friendFinder" target="_blank" class="btn btn-blue btn-sm">View code</a>
+                  <a href="https://secure-escarpment-67865.herokuapp.com/" target="_blank" class="btn btn-default btn-sm">View Online</a></div>
+              </div>
+            </div>
+          </div>
+        
+         <!-- Single Project -->
+         <div class="single-project animated fade-in ">
+          <div class="project-image">
+            <img src="images/portfolio/project_09.jpg" alt="" width="500px" height="450px" />
+          </div>
+          <div class="project-mask">
+            <div class="project-info">
+              <div class="project-title">Inventory CLI</div>
+              <div class="project-caption text-green">Node.js and MySql</div>
+              <div class="project-buttons">
+                <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-green btn-sm">View it</a>  -->
+                <a href="https://github.com/lbeagleeyes/damazon" target="_blank" class="btn btn-blue btn-sm">View code</a> 
+                <a href="https://lbeagleeyes.github.io/damazon/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
+            </div>
+          </div>
+        </div>
+        <!-- Single Project -->
+        <div class="single-project animated fade-in appear-fourth">
+          <div class="project-image">
+            <img src="images/portfolio/project_05.jpg" alt="" width="500px" height="450px" />
+          </div>
+          <div class="project-mask">
+            <div class="project-info">
+              <div class="project-title">Train Table</div>
+              <div class="project-caption text-blue">Firebase usage</div>
+              <div class="project-buttons">
+                <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-blue btn-sm">View it</a> -->
+                <a href="https://github.com/lbeagleeyes/trainTable" target="_blank" class="btn btn-blue btn-sm">View code</a>
+                <a href="https://lbeagleeyes.github.io/trainTable/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
+            </div>
+          </div>
+        </div>
+      <!-- Single Project -->
+      <div class="single-project animated fade-in appear-second">
+        <div class="project-image">
+          <img src="images/portfolio/project_12.png" alt="" width="500px" height="450px"/>
+        </div>
+        <div class="project-mask">
+          <div class="project-info">
+            <div class="project-title">Eat-Da-Burger</div>
+            <div class="project-caption text-orange">Express-Node-handlebars, MVC application</div>
+            <div class="project-buttons">
+              <!-- <a href="projects/ajax-project-details.html"
+                class="ajax-portfolio-link btn btn-orange btn-sm">View it</a> -->
+                <a href="https://github.com/lbeagleeyes/burger" target="_blank" class="btn btn-blue btn-sm">View code</a> 
+                <a href="https://stormy-spire-36648.herokuapp.com/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
+          </div>
+        </div>
+      </div>
+      
       </div>
 
       <!-- Ajax Project Details -->
