Modify project pictures

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                   <div class="skill-rate-on"></div>
                   <div class="skill-rate-on"></div>
                   <div class="skill-rate-on"></div>
-                  <div class="skill-rate-on"></div>
+                  <div class="skill-rate-off"></div>
                 </div>
               </div>
               <!-- Sinlge skill -->
@@ -204,7 +204,7 @@
                   <div class="skill-rate-on"></div>
                   <div class="skill-rate-on"></div>
                   <div class="skill-rate-on"></div>
-                  <div class="skill-rate-off"></div>
+                  <div class="skill-rate-on"></div>
                 </div>
               </div>
             </div>
@@ -252,13 +252,13 @@
                 <div class="timeline-event te-yellow">
                   <div class="event-date">Feb 2019 - Aug 2019</div>
                   <div class="event-name">Full Stack Web Development Boot Camp</div>
-                  <div class="event-description">University of Washingtom, Seattle, WA</div>
+                  <div class="event-description">University of Washington, Seattle, WA</div>
                 </div>
                 <!-- Single event -->
                 <div class="timeline-event te-yellow">
                   <div class="event-date">Sept 2017 - May 2018</div>
                   <div class="event-name">Software Product Management Certificate</div>
-                  <div class="event-description">University of Washingto, Seattle, WA</div>
+                  <div class="event-description">University of Washington, Seattle, WA</div>
                 </div>
                 <!-- Single event -->
                 <div class="timeline-event te-yellow">
@@ -329,7 +329,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in">
           <div class="project-image">
-            <img src="images/portfolio/project_01.jpg" alt="" width="500px" height="450px" />
+            <img src="images/portfolio/project_01.png" alt="" width="500px" height="450px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -346,7 +346,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-third">
           <div class="project-image">
-            <img src="images/portfolio/project_02.jpg" alt="" width="500px" height="450px" />
+            <img src="images/portfolio/project_02.png" alt="" width="500px" height="450px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -355,8 +355,8 @@
               <div class="project-buttons">
                 <!-- <a href="projects/ajax-project-details.html"
                   class="ajax-portfolio-link btn btn-yellow btn-sm">View it</a> -->
-                  <a href="https://github.com/lbeagleeyes/unit-4-game" target="_blank" class=" btn btn-blue btn-sm">View code</a> 
-                  <a href="https://lbeagleeyes.github.io/unit-4-game/" target="_blank" class="btn btn-default btn-sm">Play
+                  <a href="https://github.com/lbeagleeyes/StarWarsCardGame" target="_blank" class=" btn btn-blue btn-sm">View code</a> 
+                  <a href="https://lbeagleeyes.github.io/StarWarsCardGame/" target="_blank" class="btn btn-default btn-sm">Play
                   Online</a></div>
             </div>
           </div>
@@ -364,7 +364,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-second">
           <div class="project-image">
-            <img src="images/portfolio/project_03.jpg" alt="" width="500px" height="450px"/>
+            <img src="images/portfolio/project_03.png" alt="" width="500px" height="450px"/>
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -382,7 +382,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-fourth">
           <div class="project-image">
-            <img src="images/portfolio/project_04.jpg" alt="" width="500px" height="450px"/>
+            <img src="images/portfolio/project_04.png" alt="" width="500px" height="450px"/>
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -399,7 +399,7 @@
                 <!-- Single Project -->
        <div class="single-project animated fade-in ">
         <div class="project-image">
-          <img src="images/portfolio/project_11.jpg" alt="" width="500px" height="450px"/>
+          <img src="images/portfolio/project_11.png" alt="" width="500px" height="450px"/>
         </div>
         <div class="project-mask">
           <div class="project-info">
@@ -407,7 +407,7 @@
             <div class="project-caption text-green">Node.js, Express and MySql</div>
             <div class="project-buttons">
               <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-green btn-sm">View it</a>  -->
-              <a href="https://github.com/lbeagleeyes/Project2" target="_blank" class="btn btn-blue btn-sm">View code</a> 
+              <a href="https://github.com/lbeagleeyes/Plateful" target="_blank" class="btn btn-blue btn-sm">View code</a> 
               <a href="https://ancient-harbor-32208.herokuapp.com/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
           </div>
         </div>
@@ -424,8 +424,8 @@
               <div class="project-buttons">
                 <!-- <a href="projects/ajax-project-details.html"
                   class="ajax-portfolio-link btn btn-orange btn-sm">View it</a> -->
-                  <a href="https://github.com/lbeagleeyes/Project-1" target="_blank" class="btn btn-blue btn-sm">View code</a> 
-                  <a href="https://lbeagleeyes.github.io/Project-1/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
+                  <a href="https://github.com/lbeagleeyes/IDBug" target="_blank" class="btn btn-blue btn-sm">View code</a> 
+                  <a href="https://lbeagleeyes.github.io/IDBug/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
             </div>
           </div>
         </div>
@@ -449,7 +449,7 @@
          <!-- Single Project -->
          <div class="single-project animated fade-in appear-fourth">
             <div class="project-image">
-              <img src="images/portfolio/project_07.jpg" alt="" width="500px" height="450px" />
+              <img src="images/portfolio/project_07.png" alt="" width="500px" height="450px" />
             </div>
             <div class="project-mask">
               <div class="project-info">
@@ -475,12 +475,13 @@
               <div class="project-buttons">
                 <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-green btn-sm">View it</a>  -->
                 <a href="https://github.com/lbeagleeyes/damazon" target="_blank" class="btn btn-blue btn-sm">View code</a> 
-                <a href="https://lbeagleeyes.github.io/damazon/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
+                <!-- <a href="https://lbeagleeyes.github.io/damazon/" target="_blank" class="btn btn-default btn-sm">Online version</a> -->
+              </div>
             </div>
           </div>
         </div>
         <!-- Single Project -->
-        <div class="single-project animated fade-in appear-fourth">
+        <!-- <div class="single-project animated fade-in appear-fourth">
           <div class="project-image">
             <img src="images/portfolio/project_05.jpg" alt="" width="500px" height="450px" />
           </div>
@@ -489,14 +490,13 @@
               <div class="project-title">Train Table</div>
               <div class="project-caption text-blue">Firebase usage</div>
               <div class="project-buttons">
-                <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-blue btn-sm">View it</a> -->
                 <a href="https://github.com/lbeagleeyes/trainTable" target="_blank" class="btn btn-blue btn-sm">View code</a>
                 <a href="https://lbeagleeyes.github.io/trainTable/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
             </div>
           </div>
-        </div>
+        </div> -->
       <!-- Single Project -->
-      <div class="single-project animated fade-in appear-second">
+      <!-- <div class="single-project animated fade-in appear-second">
         <div class="project-image">
           <img src="images/portfolio/project_12.png" alt="" width="500px" height="450px"/>
         </div>
@@ -505,13 +505,11 @@
             <div class="project-title">Eat-Da-Burger</div>
             <div class="project-caption text-orange">Express-Node-handlebars, MVC application</div>
             <div class="project-buttons">
-              <!-- <a href="projects/ajax-project-details.html"
-                class="ajax-portfolio-link btn btn-orange btn-sm">View it</a> -->
                 <a href="https://github.com/lbeagleeyes/burger" target="_blank" class="btn btn-blue btn-sm">View code</a> 
                 <a href="https://stormy-spire-36648.herokuapp.com/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
           </div>
         </div>
-      </div>
+      </div> -->
       
       </div>
 
