--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
               <i class="title-icon text-blue flaticon-speech43"></i>
               <h3>Who am I?</h3>
               <p class="lead">Software Engineer with BS in Computer Science + 10 years of experience, currently
-                attending a Full Stack Web Development Bootcamp at the University of Washington, interested in complete software development life cycle, with programming skills in C/C++, .Net, and SQL, using agile methodologies. Able to work as a
+                attending a Full Stack Web Development Bootcamp at the University of Washington, interested in complete
+                software development life cycle, with programming skills in C/C++, .Net, and SQL, using agile
+                methodologies. Able to work as a
                 liaison between technical and non-technical teams due to excellent communication skills, experience
                 gathering requirements and mockup design.</p>
               <a href="#portfolio" class="btn btn-black">See my portfolio</a> <a href="#contact"
@@ -337,9 +339,11 @@
               <div class="project-caption text-blue">Javscript hangman</div>
               <div class="project-buttons">
                 <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-blue btn-sm">View it</a> -->
-                <a href="https://github.com/lbeagleeyes/WordGuess" target="_blank" class="btn btn-blue btn-sm">View code</a> 
-                <a href="https://lbeagleeyes.github.io/WordGuess/" target="_blank" class="btn btn-default btn-sm">Play Online</a>
-                </div>
+                <a href="https://github.com/lbeagleeyes/WordGuess" target="_blank" class="btn btn-blue btn-sm">View
+                  code</a>
+                <a href="https://lbeagleeyes.github.io/WordGuess/" target="_blank" class="btn btn-default btn-sm">Play
+                  Online</a>
+              </div>
             </div>
           </div>
         </div>
@@ -355,8 +359,10 @@
               <div class="project-buttons">
                 <!-- <a href="projects/ajax-project-details.html"
                   class="ajax-portfolio-link btn btn-yellow btn-sm">View it</a> -->
-                  <a href="https://github.com/lbeagleeyes/StarWarsCardGame" target="_blank" class=" btn btn-blue btn-sm">View code</a> 
-                  <a href="https://lbeagleeyes.github.io/StarWarsCardGame/" target="_blank" class="btn btn-default btn-sm">Play
+                <a href="https://github.com/lbeagleeyes/StarWarsCardGame" target="_blank"
+                  class=" btn btn-blue btn-sm">View code</a>
+                <a href="https://lbeagleeyes.github.io/StarWarsCardGame/" target="_blank"
+                  class="btn btn-default btn-sm">Play
                   Online</a></div>
             </div>
           </div>
@@ -364,7 +370,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-second">
           <div class="project-image">
-            <img src="images/portfolio/project_03.png" alt="" width="500px" height="450px"/>
+            <img src="images/portfolio/project_03.png" alt="" width="500px" height="450px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -373,8 +379,10 @@
               <div class="project-buttons">
                 <!-- <a href="projects/ajax-project-details.html"
                   class="ajax-portfolio-link btn btn-green btn-sm">View it</a>  -->
-                  <a href="https://github.com/lbeagleeyes/TriviaGame" target="_blank" class=" btn btn-blue btn-sm">View code</a> 
-                  <a href="https://lbeagleeyes.github.io/TriviaGame/" target="_blank" class="btn btn-default btn-sm">Online
+                <a href="https://github.com/lbeagleeyes/TriviaGame" target="_blank" class=" btn btn-blue btn-sm">View
+                  code</a>
+                <a href="https://lbeagleeyes.github.io/TriviaGame/" target="_blank"
+                  class="btn btn-default btn-sm">Online
                   version</a></div>
             </div>
           </div>
@@ -382,7 +390,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-fourth">
           <div class="project-image">
-            <img src="images/portfolio/project_04.png" alt="" width="500px" height="450px"/>
+            <img src="images/portfolio/project_04.png" alt="" width="500px" height="450px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -391,31 +399,35 @@
               <div class="project-buttons">
                 <!-- <a href="projects/ajax-project-details.html"
                   class="ajax-portfolio-link btn btn-red btn-sm">View it</a>  -->
-                  <a href="https://github.com/lbeagleeyes/gifSearch" target="_blank" class=" btn btn-blue btn-sm">View code</a> 
-                  <a href="https://lbeagleeyes.github.io/gifSearch/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
+                <a href="https://github.com/lbeagleeyes/gifSearch" target="_blank" class=" btn btn-blue btn-sm">View
+                  code</a>
+                <a href="https://lbeagleeyes.github.io/gifSearch/" target="_blank" class="btn btn-default btn-sm">Online
+                  version</a></div>
             </div>
           </div>
         </div>
-                <!-- Single Project -->
-       <div class="single-project animated fade-in ">
-        <div class="project-image">
-          <img src="images/portfolio/project_11.png" alt="" width="500px" height="450px"/>
-        </div>
-        <div class="project-mask">
-          <div class="project-info">
-            <div class="project-title">Plateful - Recipe Ideas Search</div>
-            <div class="project-caption text-green">Node.js, Express and MySql</div>
-            <div class="project-buttons">
-              <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-green btn-sm">View it</a>  -->
-              <a href="https://github.com/lbeagleeyes/Plateful" target="_blank" class="btn btn-blue btn-sm">View code</a> 
-              <a href="https://ancient-harbor-32208.herokuapp.com/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
+        <!-- Single Project -->
+        <div class="single-project animated fade-in ">
+          <div class="project-image">
+            <img src="images/portfolio/project_11.png" alt="" width="500px" height="450px" />
+          </div>
+          <div class="project-mask">
+            <div class="project-info">
+              <div class="project-title">Plateful - Recipe Ideas Search</div>
+              <div class="project-caption text-green">Node.js, Express and MySql</div>
+              <div class="project-buttons">
+                <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-green btn-sm">View it</a>  -->
+                <a href="https://github.com/lbeagleeyes/Plateful" target="_blank" class="btn btn-blue btn-sm">View
+                  code</a>
+                <a href="https://ancient-harbor-32208.herokuapp.com/" target="_blank"
+                  class="btn btn-default btn-sm">Online version</a></div>
+            </div>
           </div>
         </div>
-      </div>
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-second">
           <div class="project-image">
-            <img src="images/portfolio/project_06.jpg" alt="" width="500px" height="450px"/>
+            <img src="images/portfolio/project_06.jpg" alt="" width="500px" height="450px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -424,47 +436,52 @@
               <div class="project-buttons">
                 <!-- <a href="projects/ajax-project-details.html"
                   class="ajax-portfolio-link btn btn-orange btn-sm">View it</a> -->
-                  <a href="https://github.com/lbeagleeyes/IDBug" target="_blank" class="btn btn-blue btn-sm">View code</a> 
-                  <a href="https://lbeagleeyes.github.io/IDBug/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
+                <a href="https://github.com/lbeagleeyes/IDBug" target="_blank" class="btn btn-blue btn-sm">View code</a>
+                <a href="https://lbeagleeyes.github.io/IDBug/" target="_blank" class="btn btn-default btn-sm">Online
+                  version</a></div>
             </div>
           </div>
         </div>
-          <!-- Single Project -->
-          <div class="single-project animated fade-in appear-second">
-            <div class="project-image">
-                <img src="images/portfolio/project_10.jpg" alt="" width="500px" height="450px"/>
-            </div>
-            <div class="project-mask">
-              <div class="project-info">
-                <div class="project-title">Node Search App</div>
-                <div class="project-caption text-orange">CLI application using Node.js used to search for concerts, movies and music</div>
-                <div class="project-buttons">
-                    <a href="https://github.com/lbeagleeyes/liri-node-app" target="_blank" class="btn btn-blue btn-sm">View code</a>
-                  <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-orange btn-sm">View it</a> 
+        <!-- Single Project -->
+        <div class="single-project animated fade-in appear-second">
+          <div class="project-image">
+            <img src="images/portfolio/project_10.jpg" alt="" width="500px" height="450px" />
+          </div>
+          <div class="project-mask">
+            <div class="project-info">
+              <div class="project-title">Node Search App</div>
+              <div class="project-caption text-orange">CLI application using Node.js used to search for concerts, movies
+                and music</div>
+              <div class="project-buttons">
+                <a href="https://github.com/lbeagleeyes/liri-node-app" target="_blank" class="btn btn-blue btn-sm">View
+                  code</a>
+                <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-orange btn-sm">View it</a> 
                   <a href="#" target="_blank" class="btn btn-default btn-sm">Online version</a> -->
-                </div>
-              </div>
-            </div>
-          </div> 
-         <!-- Single Project -->
-         <div class="single-project animated fade-in appear-fourth">
-            <div class="project-image">
-              <img src="images/portfolio/project_07.png" alt="" width="500px" height="450px" />
-            </div>
-            <div class="project-mask">
-              <div class="project-info">
-                <div class="project-title">Friend Finder</div>
-                <div class="project-caption text-blue">Express-Node application (hosted in Heroku)</div>
-                <div class="project-buttons">
-                  <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-blue btn-sm">View it</a> -->
-                  <a href="https://github.com/lbeagleeyes/friendFinder" target="_blank" class="btn btn-blue btn-sm">View code</a>
-                  <a href="https://secure-escarpment-67865.herokuapp.com/" target="_blank" class="btn btn-default btn-sm">View Online</a></div>
               </div>
             </div>
           </div>
-        
-         <!-- Single Project -->
-         <div class="single-project animated fade-in ">
+        </div>
+        <!-- Single Project -->
+        <div class="single-project animated fade-in appear-fourth">
+          <div class="project-image">
+            <img src="images/portfolio/project_07.png" alt="" width="500px" height="450px" />
+          </div>
+          <div class="project-mask">
+            <div class="project-info">
+              <div class="project-title">Friend Finder</div>
+              <div class="project-caption text-blue">Express-Node application (hosted in Heroku)</div>
+              <div class="project-buttons">
+                <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-blue btn-sm">View it</a> -->
+                <a href="https://github.com/lbeagleeyes/friendFinder" target="_blank" class="btn btn-blue btn-sm">View
+                  code</a>
+                <a href="https://secure-escarpment-67865.herokuapp.com/" target="_blank"
+                  class="btn btn-default btn-sm">View Online</a></div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single Project -->
+        <div class="single-project animated fade-in appear-fourth">
           <div class="project-image">
             <img src="images/portfolio/project_09.jpg" alt="" width="500px" height="450px" />
           </div>
@@ -474,7 +491,8 @@
               <div class="project-caption text-green">Node.js and MySql</div>
               <div class="project-buttons">
                 <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-green btn-sm">View it</a>  -->
-                <a href="https://github.com/lbeagleeyes/damazon" target="_blank" class="btn btn-blue btn-sm">View code</a> 
+                <a href="https://github.com/lbeagleeyes/damazon" target="_blank" class="btn btn-blue btn-sm">View
+                  code</a>
                 <!-- <a href="https://lbeagleeyes.github.io/damazon/" target="_blank" class="btn btn-default btn-sm">Online version</a> -->
               </div>
             </div>
@@ -495,8 +513,8 @@
             </div>
           </div>
         </div> -->
-      <!-- Single Project -->
-      <!-- <div class="single-project animated fade-in appear-second">
+        <!-- Single Project -->
+        <!-- <div class="single-project animated fade-in appear-second">
         <div class="project-image">
           <img src="images/portfolio/project_12.png" alt="" width="500px" height="450px"/>
         </div>
@@ -506,11 +524,12 @@
             <div class="project-caption text-orange">Express-Node-handlebars, MVC application</div>
             <div class="project-buttons">
                 <a href="https://github.com/lbeagleeyes/burger" target="_blank" class="btn btn-blue btn-sm">View code</a> 
-                <a href="https://stormy-spire-36648.herokuapp.com/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
+                <a href="https://stormy-spire-36648.herokuapp.com/" target="_blank" class="btn btn-default btn-sm">Online version</a>
+              </div>
           </div>
         </div>
       </div> -->
-      
+
       </div>
 
       <!-- Ajax Project Details -->
