Update resume link

--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
           <li><i class="inline-icon icon-before-and-after text-primary fa fa-phone"></i>(206)9729255</li>
         </ul>
         <br /><br />
-        <p><a href="https://zety.com/mycv/laura-bermudez-SwEng" target="_blank" class="btn btn-primary">View my CV</a>
+        <p><a href="https://zety.com/mycv/LauraBermudez" target="_blank" class="btn btn-primary">View my CV</a>
         </p>
         <!-- Bottom Bar -->
         <div class="bottom-bar contact-bottom-bar">
