Add React memory game

--- a/index.html
+++ b/index.html
@@ -479,6 +479,24 @@
             </div>
           </div>
         </div>
+        <!-- Single Project -->
+        <div class="single-project animated fade-in appear-fourth">
+          <div class="project-image">
+            <img src="images/portfolio/project_13.png" alt="" width="500px" height="450px" />
+          </div>
+          <div class="project-mask">
+            <div class="project-info">
+              <div class="project-title">The Hobbit Memory Game</div>
+              <div class="project-caption text-blue">REACT</div>
+              <div class="project-buttons">
+                <!-- <a href="projects/ajax-project-details.html" class="ajax-portfolio-link btn btn-blue btn-sm">View it</a> -->
+                <a href="https://github.com/lbeagleeyes/memory-game" target="_blank" class="btn btn-blue btn-sm">View
+                  code</a>
+                <a href="https://lbeagleeyes.github.io/memory-game/" target="_blank"
+                  class="btn btn-default btn-sm">View Online</a></div>
+            </div>
+          </div>
+        </div>
 
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-fourth">
