--- a/index.html
+++ b/index.html
@@ -201,6 +201,36 @@
               </div>
               <!-- Sinlge skill -->
               <div class="skill">
+                <span class="skill-name">REACT</span>
+                <div class="skill-bar sb-green">
+                  <div class="skill-rate-on"></div>
+                  <div class="skill-rate-off"></div>
+                  <div class="skill-rate-off"></div>
+                  <div class="skill-rate-off"></div>
+                </div>
+              </div>
+              <!-- Sinlge skill -->
+              <div class="skill">
+                <span class="skill-name">SQL</span>
+                <div class="skill-bar sb-green">
+                  <div class="skill-rate-on"></div>
+                  <div class="skill-rate-on"></div>
+                  <div class="skill-rate-on"></div>
+                  <div class="skill-rate-off"></div>
+                </div>
+              </div>
+              <!-- Sinlge skill -->
+              <div class="skill">
+                <span class="skill-name">MongoDB</span>
+                <div class="skill-bar sb-green">
+                  <div class="skill-rate-on"></div>
+                  <div class="skill-rate-off"></div>
+                  <div class="skill-rate-off"></div>
+                  <div class="skill-rate-off"></div>
+                </div>
+              </div>
+              <!-- Sinlge skill -->
+              <div class="skill">
                 <span class="skill-name">Agile Software Development</span>
                 <div class="skill-bar sb-green">
                   <div class="skill-rate-on"></div>
