Add project 3 RE-Volve and minor modifications

--- a/blog-page.html
+++ b/blog-page.html
@@ -3,13 +3,13 @@
 <head>
 
 <!-- Title -->
-<title>Moje. - Responsive Bootstrap Resume vCard HTML/CSS Template</title>
+<title>Portfolio Laura Bermudez Garcia</title>
 
 <!-- Meta -->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Moje. - Responsive One-Page Bootstrap vCard Template.">
-<meta name="keywords" content="moje, responsive, one page, resume, bootstrap, vCard, personal page, html5, css3, retina">
+<meta name="description" content="Portfolio Laura Bermudez Software Engineer">
+<meta name="keywords" content="software engineer, responsive, one page, resume, bootstrap, vCard, personal page, html5, css3, retina">
 <meta name="author" content="Suelo">
 
 <link rel="shortcut icon" href="images/favicon.png">
