--- a/index.html
+++ b/index.html
@@ -155,12 +155,8 @@
             <div class="resume-box animated slide-in-top">
               <i class="title-icon text-blue flaticon-speech43"></i>
               <h3>Who am I?</h3>
-              <p class="lead">Software Engineer with BS in Computer Science + 10 years of experience, currently
-                attending a Full Stack Web Development Bootcamp at the University of Washington, interested in complete
-                software development life cycle, with programming skills in C/C++, .Net, and SQL, using agile
-                methodologies. Able to work as a
-                liaison between technical and non-technical teams due to excellent communication skills, experience
-                gathering requirements and mockup design.</p>
+              <p class="lead">Software Engineer with BS in Computer Science + 10 years of experience,
+                graduate from a Full Stack Web Development Bootcamp at the University of Washington, interested in complete software development life cycle. Able to work as a liaison between technical and non-technical teams due to excellent communication skills, experience gathering requirements and mockup design.</p>
               <a href="#portfolio" class="btn btn-black">See my portfolio</a> <a href="#contact"
                 class="btn btn-default">Contact me</a>
             </div>
@@ -224,7 +220,7 @@
                 <span class="skill-name">MongoDB</span>
                 <div class="skill-bar sb-green">
                   <div class="skill-rate-on"></div>
-                  <div class="skill-rate-off"></div>
+                  <div class="skill-rate-on"></div>
                   <div class="skill-rate-off"></div>
                   <div class="skill-rate-off"></div>
                 </div>
@@ -547,20 +543,20 @@
           </div>
         </div>
         <!-- Single Project -->
-        <!-- <div class="single-project animated fade-in appear-fourth">
+        <div class="single-project animated fade-in appear-fourth">
           <div class="project-image">
-            <img src="images/portfolio/project_05.jpg" alt="" width="500px" height="450px" />
+            <img src="images/portfolio/project_05.png" alt="" width="500px" height="450px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
-              <div class="project-title">Train Table</div>
-              <div class="project-caption text-blue">Firebase usage</div>
+              <div class="project-title">Re:Volve</div>
+              <div class="project-caption text-blue">MERN application for Volunteering Lesson Plans</div>
               <div class="project-buttons">
-                <a href="https://github.com/lbeagleeyes/trainTable" target="_blank" class="btn btn-blue btn-sm">View code</a>
-                <a href="https://lbeagleeyes.github.io/trainTable/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
+                <a href="https://github.com/lbeagleeyes/RE-Volve" target="_blank" class="btn btn-blue btn-sm">View code</a>
+                <a href="https://immense-cove-97856.herokuapp.com/" target="_blank" class="btn btn-default btn-sm">Online version</a></div>
             </div>
           </div>
-        </div> -->
+        </div> 
         <!-- Single Project -->
         <!-- <div class="single-project animated fade-in appear-second">
         <div class="project-image">
