--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                 <span class="skill-name">REACT</span>
                 <div class="skill-bar sb-green">
                   <div class="skill-rate-on"></div>
-                  <div class="skill-rate-off"></div>
-                  <div class="skill-rate-off"></div>
+                  <div class="skill-rate-on"></div>
+                  <div class="skill-rate-on"></div>
                   <div class="skill-rate-off"></div>
                 </div>
               </div>
