--- a/index.html
+++ b/index.html
@@ -779,8 +779,8 @@
         <h2>Do you want to hire me?</h2>
         <!-- Contact List -->
         <ul class="list-unstyled list-unstyled-icons">
-          <li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>Kirkland<br /><br />WA
-            98034, USA</li>
+          <li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>Concord<br /><br />CA
+            94521, USA</li>
           <li><i class="inline-icon icon-before-and-after text-primary fa fa-comment"></i><a
               href="mailto:mailto:laurabermudezg@gmail.com">laurabermudezg@gmail.com</a></li>
           <li><i class="inline-icon icon-before-and-after text-primary fa fa-phone"></i>(206)9729255</li>
