--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
           <!-- Contact List -->
           <ul class="list-inline">
-            <li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>Kirkland, WA, USA</li>
+            <li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>Concord, CA, USA</li>
             <li><i class="inline-icon icon-before-and-after text-primary fa fa-comment"></i><a
                 href="#">laurabermudezg@gmail.com</a></li>
             <li><i class="inline-icon icon-before-and-after text-primary fa fa-phone"></i>(206)9729255</li>
