--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
             <div class="resume-box animated slide-in-top">
               <i class="title-icon text-blue flaticon-speech43"></i>
               <h3>Who am I?</h3>
-              <p class="lead">Software Engineer with BS in Computer Science + 10 years of experience,
-                graduate from a Full Stack Web Development Bootcamp at the University of Washington, interested in complete software development life cycle. Able to work as a liaison between technical and non-technical teams due to excellent communication skills, experience gathering requirements and mockup design.</p>
+              <p class="lead">Software Engineer with extensive application development experience; passionate about user-centered design with the ability to work as a liaison between technical and non-technical teams due to excellent experience gathering requirements. Demonstrated ability to learn fast and work throughout different tech stacks to deliver results quickly.</p>
               <a href="#portfolio" class="btn btn-black">See my portfolio</a> <a href="#contact"
                 class="btn btn-default">Contact me</a>
             </div>
