update resume and specify bootcamp portfolio

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <ul class="menu nav me-nav">
       <li class="menu-item active"><a href="#profile"><span>Profile</span><i class="fa fa-user"></i></a></li>
       <li class="menu-item"><a href="#resume"><span>Resume</span><i class="fa fa-pencil"></i></a></li>
-      <li class="menu-item"><a href="#portfolio"><span>Portfolio</span><i class="fa fa-desktop"></i></a></li>
+      <li class="menu-item"><a href="#portfolio"><span>Bootcamp Portfolio</span><i class="fa fa-desktop"></i></a></li>
       <!-- <li class="menu-item"><a href="#blog"><span>Latest Posts</span><i class="fa fa-comment"></i></a></li> -->
       <li class="menu-item"><a href="#contact"><span>Contact</span><i class="fa fa-phone"></i></a></li>
       <!-- <li class="menu-item"><a href="components.html"><span>Components</span><i class="fa fa-bolt"></i></a></li> -->
@@ -156,7 +156,7 @@
               <i class="title-icon text-blue flaticon-speech43"></i>
               <h3>Who am I?</h3>
               <p class="lead">Software Engineer with extensive application development experience; passionate about user-centered design with the ability to work as a liaison between technical and non-technical teams due to excellent experience gathering requirements. Demonstrated ability to learn fast and work throughout different tech stacks to deliver results quickly.</p>
-              <a href="#portfolio" class="btn btn-black">See my portfolio</a> <a href="#contact"
+              <a href="#portfolio" class="btn btn-black">See my bootcamp portfolio</a> <a href="#contact"
                 class="btn btn-default">Contact me</a>
             </div>
 
@@ -785,7 +785,7 @@
           <li><i class="inline-icon icon-before-and-after text-primary fa fa-phone"></i>(206)9729255</li>
         </ul>
         <br /><br />
-        <p><a href="documentation/assets/laura-bermudez-sweng.pdf" target="_blank" class="btn btn-primary">View my CV</a>
+        <p><a href="documentation/assets/LauraBermudez-SoftwareEng.pdf" target="_blank" class="btn btn-primary">View my CV</a>
         </p>
         <!-- Bottom Bar -->
         <div class="bottom-bar contact-bottom-bar">
