--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
           <li><i class="inline-icon icon-before-and-after text-primary fa fa-phone"></i>(206)9729255</li>
         </ul>
         <br /><br />
-        <p><a href="documentation/assets/LauraBermudez-SoftwareEng.pdf" target="_blank" class="btn btn-primary">View my CV</a>
+        <p><a href="documentation/assets/LauraBermudez-SoftwareEng.pdf" target="_blank" class="btn btn-primary">Resume</a>
         </p>
         <!-- Bottom Bar -->
         <div class="bottom-bar contact-bottom-bar">
